# lakewatch

./: README.md  Test Suite.ipynb  main.py  pyproject.toml
src/lakewatch/core/: provider.py  result.py  runner.py
src/lakewatch/strategies/: base.py  date_continuity.py  effective_dating.py  uniqueness.py
src/lakewatch/util/: spark_utils.py
